--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "dependencies": {
     "gsap": "^3.8.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "slim-select": "^1.27.1"
   },
   "browserslist": [
     "last 5 version"
