--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/resources/js/vanilla-app.js": "/resources/js/vanilla-app.js",
-    "/public/css/app.css": "/public/css/app.css",
-    "/public/js/app.js": "/public/js/app.js"
+    "/public/js/app.js": "/public/js/app.js",
+    "/public/css/app.css": "/public/css/app.css"
 }
