--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prettier": "^2.6.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "babel-eslint": "^10.1.0"
+    "@babel/eslint-parser": "^7.18.2"
   },
   "dependencies": {
     "gsap": "^3.8.0",
@@ -43,7 +43,10 @@
     "lodash.throttle": "^4.1.1",
     "slim-select": "^1.27.1",
     "axios": "^0.27.2",
-    "sweetalert2": "^11.4.18"
+    "sweetalert2": "^11.4.18",
+    "parallax-js": "^3.1.0",
+    "nouislider": "^15.6.0",
+    "wnumb": "^1.2.0"
   },
   "browserslist": [
     "last 5 version"
