--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sweetalert2": "^11.4.18",
     "parallax-js": "^3.1.0",
     "nouislider": "^15.6.0",
-    "wnumb": "^1.2.0"
+    "wnumb": "^1.2.0",
+    "lottie-web": "^5.9.6"
   },
   "browserslist": [
     "last 5 version"
