--- a/public/composer.json
+++ b/public/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mailchimp/marketing": "^3.0"
+        "mailchimp/marketing": "^3.0",
+        "vlucas/phpdotenv": "^5.4"
     }
 }
